CUPS Raster output device: Use positive values (1) as dummy values to mark that the color depth has changed and therefore memory needs to get rallocated

WEith this both bug #691733 and bug #690435 get fixed, but this is not
necessarily he right and best solution.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12007 a1074d23-0009-0410-80fe-cf8c14f379e6